@@ -1,0 +1,3 @@
+googletest/test/run_tests_util_test\.py$
+ChangeLog
+ChangeLog\.[0-9]+
